--- a/roles/le-appliance/tasks/main.yml
+++ b/roles/le-appliance/tasks/main.yml
@@ -1,60 +1,5 @@
 ---
 # tasks file for le-appliance
-- name: Check if appliance is already installed
-  stat:
-    path: "{{ temp_dir }}/{{ appliance_tarball }}"
-  register: appliance_installed
-
-- name: Download appliance tarball
-  get_url:
-    url: "https://example.com/{{ appliance_tarball }}"
-    dest: "{{ temp_dir }}/{{ appliance_tarball }}"
-    mode: 0644
+- name: Check if Login Enterprise is installed
+  include_tasks: check_existing.yml
   when: not appliance_installed.stat.exists
-
-- name: Extract appliance tarball
-  unarchive:
-    src: "{{ temp_dir }}/{{ appliance_tarball }}"
-    dest: "{{ temp_dir }}"
-    remote_src: yes
-    creates: "{{ temp_dir }}/le-appliance"
-  when: not appliance_installed.stat.exists
-
-- name: Install appliance
-  command: "{{ temp_dir }}/le-appliance/install.sh -y"
-  args:
-    chdir: "{{ temp_dir }}/le-appliance"
-  when: not appliance_installed.stat.exists
-
-- name: Set hostname
-  hostname:
-    name: "{{ hostname }}"
-  when: not appliance_installed.stat.exists
-
-- name: Set domainname
-  lineinfile:
-    path: /etc/resolv.conf
-    line: "domain {{ domainname }}"
-  when: not appliance_installed.stat.exists
-
-- name: Ensure local admin account
-  user:
-    name: "{{ admin_username }}"
-    password: "{{ admin_password | password_hash('sha512') }}"
-    shell: /bin/bash
-    update_password: on_create
-  when: not appliance_installed.stat.exists
-
-  - name: Ensure local admin account is in sudoers
-  lineinfile:
-    path: /etc/sudoers
-    line: "{{ admin_username }} ALL=(ALL) NOPASSWD: ALL"
-    validate: "visudo -cf %s"
-  when: not appliance_installed.stat.exists
-
-  - name: Ensure local loginenterprise group
-  group:
-    name: loginenterprise
-    state: present
-  when: not appliance_installed.stat.exists
-  
