added install_dir var

--- a/roles/le-appliance/defaults/main.yml
+++ b/roles/le-appliance/defaults/main.yml
@@ -5,3 +5,4 @@ hostname: "le-appliance"
 domainname: "example.com"
 temp_dir: "/tmp"
 appliance_tarball: "le-appliance-1.0.0.tar.gz"
+install_dir: "/loginvsi"
