replaced static values with variables

--- a/roles/le-appliance/defaults/main.yml
+++ b/roles/le-appliance/defaults/main.yml
@@ -6,3 +6,7 @@ domainname: "example.com"
 temp_dir: "/tmp"
 appliance_tarball: "le-appliance-1.0.0.tar.gz"
 install_dir: "/loginvsi"
+
+required_cpu: 2
+required_ram: 4096
+required_space: 32212254720
