--- a/roles/le-appliance/tasks/check_system.yml
+++ b/roles/le-appliance/tasks/check_system.yml
@@ -4,7 +4,7 @@
   - name: RAM Check
     assert:
       that:
-        - ansible_memtotal_mb >= {{ required_ram }}}
+        - ansible_memtotal_mb >= {{ required_ram }}
   - name: CPU Check
     assert:
       that:
