--- a/roles/le-appliance/tasks/check_system.yml
+++ b/roles/le-appliance/tasks/check_system.yml
@@ -14,3 +14,7 @@
     assert:
       that:
         - (ansible_mounts|selectattr("mount", "equalto", "/")|list)[0].size_available >= {{ required_space }}
+  - name: SELINUX Check
+    assert:
+      that:
+        - ansible_selinux.status == "disabled"
